@@ -22,6 +22,36 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|InputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -90,23 +120,7 @@ name|common
 operator|.
 name|util
 operator|.
-name|FastInputStream
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
-name|util
-operator|.
-name|NamedList
+name|DataInputInputStream
 import|;
 end_import
 
@@ -128,31 +142,17 @@ end_import
 
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|io
+name|apache
 operator|.
-name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
+name|solr
 operator|.
-name|io
-operator|.
-name|InputStream
-import|;
-end_import
-
-begin_import
-import|import
-name|java
+name|common
 operator|.
 name|util
 operator|.
-name|List
+name|NamedList
 import|;
 end_import
 
@@ -220,7 +220,7 @@ specifier|public
 name|SolrDocument
 name|readSolrDocument
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
@@ -253,7 +253,7 @@ specifier|public
 name|SolrDocumentList
 name|readSolrDocumentList
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
