@@ -22,6 +22,76 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|InputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|OutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -78,7 +148,7 @@ name|common
 operator|.
 name|util
 operator|.
-name|FastInputStream
+name|DataInputInputStream
 import|;
 end_import
 
@@ -111,46 +181,6 @@ operator|.
 name|util
 operator|.
 name|NamedList
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|InputStream
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|OutputStream
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|*
 import|;
 end_import
 
@@ -406,7 +436,7 @@ specifier|public
 name|NamedList
 name|readNamedList
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
@@ -499,7 +529,7 @@ specifier|public
 name|List
 name|readIterator
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|fis
 parameter_list|)
 throws|throws
@@ -535,7 +565,7 @@ specifier|private
 name|List
 name|readOuterMostDocIterator
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|fis
 parameter_list|)
 throws|throws
