@@ -505,7 +505,7 @@ name|Object
 argument_list|>
 name|readOrderedMap
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
@@ -588,7 +588,7 @@ name|Object
 argument_list|>
 name|readNamedList
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
@@ -847,7 +847,7 @@ specifier|public
 name|Object
 name|readVal
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
@@ -1520,7 +1520,7 @@ name|byte
 index|[]
 name|readByteArray
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
@@ -1624,7 +1624,7 @@ specifier|public
 name|SolrDocument
 name|readSolrDocument
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
@@ -1705,7 +1705,7 @@ specifier|public
 name|SolrDocumentList
 name|readSolrDocumentList
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
@@ -1884,7 +1884,7 @@ specifier|public
 name|SolrInputDocument
 name|readSolrInputDocument
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
@@ -2100,7 +2100,7 @@ name|Object
 argument_list|>
 name|readMap
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
@@ -2223,7 +2223,7 @@ name|Object
 argument_list|>
 name|readIterator
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|fis
 parameter_list|)
 throws|throws
@@ -2422,7 +2422,7 @@ name|Object
 argument_list|>
 name|readArray
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
@@ -2597,7 +2597,7 @@ specifier|public
 name|String
 name|readStr
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
@@ -2758,7 +2758,7 @@ specifier|public
 name|int
 name|readSmallInt
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
@@ -2896,7 +2896,7 @@ specifier|public
 name|long
 name|readSmallLong
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|dis
 parameter_list|)
 throws|throws
@@ -3456,7 +3456,7 @@ specifier|public
 name|int
 name|readSize
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|in
 parameter_list|)
 throws|throws
@@ -3555,7 +3555,7 @@ specifier|static
 name|int
 name|readVInt
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|in
 parameter_list|)
 throws|throws
@@ -3685,7 +3685,7 @@ specifier|static
 name|long
 name|readVLong
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|in
 parameter_list|)
 throws|throws
@@ -3880,7 +3880,7 @@ specifier|public
 name|String
 name|readExternString
 parameter_list|(
-name|FastInputStream
+name|DataInputInputStream
 name|fis
 parameter_list|)
 throws|throws
